--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,6 +11,11 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     
+    - name: Setup Node.js
+      uses: actions/setup-node@v3
+      with:
+        node-version: '18'
+        
     - name: Deploy to server
       uses: appleboy/ssh-action@v0.1.5
       with:
@@ -18,10 +23,8 @@ jobs:
         username: deploy
         key: ${{ secrets.PRIVATE_KEY }}
         script: |
-          cd /var/www/laratechlabs.com
+          cd /var/www/laratechlabs.com/laratechlabs
           git pull origin main
-          # Add any build commands here if needed
-          # npm install && npm run build
+          npm install
+          npm run build
           sudo systemctl reload nginx
-
-
