--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,15 +9,51 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-    - uses: actions/checkout@v3
-    
-    - name: Setup Node.js
-      uses: actions/setup-node@v3
-      with:
-        node-version: '18'
+    - name: Checkout code
+      uses: actions/checkout@v3
+      
+    - name: Debug - Show secrets status
+      run: |
+        echo "Checking secrets..."
+        echo "AWS_ACCESS_KEY_ID exists: ${{ secrets.AWS_ACCESS_KEY_ID != '' }}"
+        echo "AWS_SECRET_ACCESS_KEY exists: ${{ secrets.AWS_SECRET_ACCESS_KEY != '' }}"
+        echo "SECURITY_GROUP_ID exists: ${{ secrets.SECURITY_GROUP_ID != '' }}"
+        echo "HOST exists: ${{ secrets.HOST != '' }}"
+        echo "PRIVATE_KEY exists: ${{ secrets.PRIVATE_KEY != '' }}"
         
+    - name: Configure AWS CLI
+      uses: aws-actions/configure-aws-credentials@v2
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: us-east-2
+        
+    - name: Get runner IP and add to security group
+      id: ip
+      run: |
+        RUNNER_IP=$(curl -s https://checkip.amazonaws.com)
+        echo "🔍 Runner IP: $RUNNER_IP"
+        echo "🔧 Security Group ID: ${{ secrets.SECURITY_GROUP_ID }}"
+        echo "runner_ip=$RUNNER_IP" >> $GITHUB_OUTPUT
+        
+        echo "📝 Adding IP to security group..."
+        aws ec2 authorize-security-group-ingress \
+          --group-id ${{ secrets.SECURITY_GROUP_ID }} \
+          --protocol tcp \
+          --port 22 \
+          --cidr ${RUNNER_IP}/32 \
+          --description "Temporary GitHub Actions access - $(date)" \
+          && echo "✅ Successfully added IP to security group" \
+          || echo "❌ Failed to add IP to security group"
+          
+    - name: Wait for security group rule to propagate
+      run: |
+        echo "⏳ Waiting 10 seconds for rule to propagate..."
+        sleep 10
+        echo "✅ Wait complete"
+      
     - name: Deploy to server
-      uses: appleboy/ssh-action@v0.1.5
+      uses: appleboy/ssh-action@v0.1.7
       with:
         host: ${{ secrets.HOST }}
         username: deploy
@@ -28,3 +64,16 @@ jobs:
           npm install
           npm run build
           sudo systemctl reload nginx
+          echo "✅ Deployment completed successfully!"
+          
+    - name: Remove runner IP from security group
+      if: always()
+      run: |
+        echo "🧹 Cleaning up security group rule..."
+        aws ec2 revoke-security-group-ingress \
+          --group-id ${{ secrets.SECURITY_GROUP_ID }} \
+          --protocol tcp \
+          --port 22 \
+          --cidr ${{ steps.ip.outputs.runner_ip }}/32 \
+          && echo "✅ Successfully removed IP from security group" \
+          || echo "⚠️ Could not remove IP (may have been removed already)"
