--- a/nginx.conf
+++ b/nginx.conf
@@ -1,32 +1,45 @@
 server {
-    listen 80;
-    listen [::]:80;
+    listen 443 ssl;
+    listen [::]:443 ssl;
     server_name laratechlabs.com www.laratechlabs.com;
-
+    
     # Serve files from the dist directory
     root /var/www/laratechlabs.com/laratechlabs/dist;
     index index.html;
-
+    
     # Handle client-side routing
     location / {
         try_files $uri $uri/ /index.html;
     }
-
+    
     # Cache static assets
     location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
         expires 1y;
         add_header Cache-Control "public, immutable";
     }
-
+    
     # Security headers
     add_header X-Frame-Options "SAMEORIGIN" always;
     add_header X-Content-Type-Options "nosniff" always;
     add_header X-XSS-Protection "1; mode=block" always;
     add_header Referrer-Policy "no-referrer-when-downgrade" always;
-
+    
     # Gzip compression
     gzip on;
     gzip_vary on;
     gzip_min_length 1024;
     gzip_types text/plain text/css text/xml text/javascript application/x-javascript application/xml+rss application/javascript application/json;
+    
+    # SSL Configuration
+    ssl_certificate /etc/letsencrypt/live/laratechlabs.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/laratechlabs.com/privkey.pem;
+    include /etc/letsencrypt/options-ssl-nginx.conf;
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+}
+
+server {
+    listen 80;
+    listen [::]:80;
+    server_name laratechlabs.com www.laratechlabs.com;
+    return 301 https://$host$request_uri;
 }
